fix bugs on safari

--- a/main.css
+++ b/main.css
@@ -105,6 +105,7 @@ nav > #nav_right {
 .avatar-small {
   border-radius: 50%;
   width: 1.8rem;
+  height: 1.8rem;
   margin-right: 4px;
 }
 
@@ -404,6 +405,7 @@ footer ul li:hover {
     /* display: none; */
     margin: 0;
     width: 100%;
+    left: 0;
     overflow-x: scroll;
   }
   .bio > .names {
